# paper-2025-upperjsj-streamflow-intercomp

./: .gitignore  latexmkrc  main.tex  pyproject.toml  references.bib
Definitions/: .gitignore  journalnames.tex  mdpi.cls  mdpi_apacite.bst
data/: grid_definition.txt  inbasin.nc  river_station_mapping.csv  setup.nc  station.csv
data/discharge_atgauge/: cldasnmp.parquet  cldasnmp_passthrough.parquet  cnrd.parquet  cnrd_passthrough.parquet  era5l.parquet  era5l_passthrough.parquet  era5lnmp.parquet  era5lnmp_passthrough.parquet  glofas-mc.parquet  glofas.parquet  glofas_24hr.parquet  glofas_passthrough.parquet  grfr-mc.parquet  grfr.parquet  grfr_3hr.parquet  grfr_passthrough.parquet
dev/: convert_era5l.py  extract_discharge_grfr.py  extract_era5l_runoff.py  redistribute_discharge_time_chunk.py  river_parameter.toml  river_passthrough.py
fig/: workflow.drawio
scripts/: plot_domain.ipynb  plot_runoff_mean.ipynb
workflow/: calculate_mean.py  collect_qobs.py  collect_runoff.py  convert_nmp.py  extract_discharge_atgauge.py  extract_discharge_glofas.py  fetch_era5l.py  mask_inbasin.py  redistribute_month_chunk.py  redistribute_time_chunk.py  river_export.py  river_input.py  river_muskingumcunge.py
