[project]
name = "paper-upperjsj-streamflow-intercomp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5netcdf>=1.4.1",
    "matplotlib>=3.9.3",
    "mpltern>=1.0.4",
    "netcdf4>=1.7.2",
    "numba>=0.60.0",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "shapely>=2.0.6",
    "xarray>=2024.11.0",
]

[dependency-groups]
dev = [
    "cdsapi>=0.7.4",
    "dateutils>=0.6.12",
    "ipykernel>=6.29.5",
    "pyright>=1.1.390",
]

[tool.ruff.lint]
fixable = ["ALL"]
