[project]
name = "paper-upperjsj-streamflow-intercomp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "h5netcdf>=1.5.0",
    "matplotlib>=3.10.0",
    "mpltern>=1.0.4",
    "netcdf4>=1.7.2",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "shapely>=2.0.7",
    "xarray>=2025.1.2",
]

[dependency-groups]
dev = ["dateutils>=0.6.12", "ipykernel>=6.29.5", "pyright>=1.1.393"]

[tool.ruff.lint]
fixable = ["ALL"]
